<resources>
    <string name="app_name">SenseIT</string>

    <string name="str_username">username</string>
    <string name="str_password">password</string>
    <string name="str_login">login</string>
    <string name="error_invalid_username">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="str_arrow_desc">Arrow indicating screen redirection</string>
    <string name="str_mark_resolved">Resolved</string>
    <string name="str_raise_issue">Raise issue</string>
    <string name="str_accept_task">Accept</string>
    <string name="str_task_information">Task Information</string>
    <string name="str_area_location">Location Information</string>
    <string name="str_view_on_map">view on map</string>
    <string name="str_server_ip">85.188.15.170</string>
    <string name="str_server_port">8765</string>
</resources>
