<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="junction.senseit.TaskManager">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/str_task_information"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_task_desc_text"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="150dp" />

            <TextView
                android:text="@string/str_area_location"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_room_number"
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_floor_info"
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_prob_location"
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_disp_loc_on_map"
                android:text="@string/str_view_on_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_raise_issue"
            android:text="@string/str_raise_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/btn_accept_task"
            android:text="@string/str_accept_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle" />

        <Button
            android:id="@+id/btn_mark_resolved"
            android:text="@string/str_mark_resolved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle" />

    </LinearLayout>

</RelativeLayout>
